src/objects/RP_Getting_Started_Links__mdt.object
<CustomObject>
    <fields>
        <fullName>RP_Customer_Journey_Link__c</fullName>
        <label>RP Customer Journey Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RP_Npsp_Link__c</fullName>
        <label>RP Npsp Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RP_Salesforce_Org_Link__c</fullName>
        <label>RP Salesforce Org Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RP_Trailhead_Link__c</fullName>
        <label>RP Trailhead Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RP_Us_Link__c</fullName>
        <label>RP Us Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RP_Webinar_Link__c</fullName>
        <label>RP Webinar Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RP Getting Started Links</label>
    <pluralLabel>RP Getting Started Links</pluralLabel>
</CustomObject>